// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CCard renders correctly 1`] = `
<div
  class="c-card c-text-left c-bg-success c-border-solid c-text-white"
>
  <!---->
  <!---->
</div>
`;

exports[`CCard renders correctly with slots 1`] = `
<div
  class="c-card c-text-left c-bg-success c-border-solid c-text-white"
>
  <!---->
  this should overwrite body
  <br />
  <!---->
</div>
`;
